<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Motion Eye</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_device_detail">add_device_detail</string>
    <string name="device_label">Device Label</string>
    <string name="device_url">Device URL with http:// or https://</string>
    <string name="http_for_local_access">(Optional) Port (usually 8765)</string>
    <string name="username_hint">Username (Optional)</string>
    <string name="password_hint">Password (Optional)</string>
    <string name="save_btn_txt">SAVE</string>
    <string name="credential_fact">Good to know: the motionEye app stores your credentials in an encrypted format in your phone. \n\nOnly your phone can access and decrypt the credentials.</string>
    <string name="title_activity_web_motion_eye">web_motion_eye</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="motioneye_servers">motionEye Servers</string>
    <string name="add_camera_title">Add Camera</string>
    <string name="action_about">About</string>
    <string name="tut_sub_device_list">Tap once to view full-screen, Hold to reveal edit and delete options\n\n
        If this motionEye device is password protected, enter full-screen, type in the credentials and click on
        \"Remember Me\" to save the password and to connect your motionEye camera without entering
        the credentials again :)\n\n
        Click on minus button to hide the preview\n\n
        For more info check out Help and FAQ section by clicking menu buttons in top right corner</string>
    <string name="tut_title_device_list">This is your first device</string>
    <string name="tut_title_add_button">Add your first device</string>
    <string name="tut_sub_add_button">Tap the + button to get started \nThis button can be dragged and dropped</string>
    <string name="toast_added">Added</string>
    <string name="warning_duplicate_label">motionEye server with this Label is already present!</string>
    <string name="warning_invalid_url">Invalid URL!</string>
    <string name="warning_empty_url">Empty URL!</string>
    <string name="warning_empty_label">Empty Label!</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="https_github_com_sjwall">https://github.com/sjwall</string>
    <string name="credits">Credits</string>
    <string name="motion_eye_logo">MOTION_EYE_LOGO</string>
    <string name="app_created_by_futurejj">App Created by: FutureJJ</string>
    <string name="cc_calin_crisan">Logo by Calin Crisan</string>
    <string name="email_icon">EMAIL_ICON</string>
    <string name="cancelled_toast">Cancelled</string>
    <string name="connecting_mE">Connecting motionEye</string>
    <string name="connecting_cloud_storage">Connecting to Cloud Storage</string>
    <string name="loading">Loading…</string>
    <string name="steps_to_install_motioneye">Steps to install motionEye</string>
    <string name="imageview_for_url_icon">This is image of url icon</string>
    <string name="imageview_for_port_icon">This is image of HTTP port icon</string>
    <string name="imageview_for_label_icon">This is image of label icon</string>
    <string name="button_for_confirmation">Press this button to confirm device addition</string>
    <string name="button_for_cancellation">Press this button to cancel</string>
    <string name="dummy_button_for_showcaseview">Do not press this button, this is just a dummy button for displaying tutorial</string>
    <string name="button_for_device_detail_intent">Press this button to add a network camera device</string>
    <string name="inputlayout_for_label">This is layout for label</string>
    <string name="inputlayout_for_port">This is layout for port</string>
    <string name="inputlayout_for_url">This is layout for url</string>
    <string name="constraintlayout_for_list_ad_and_etc">This is just a layout containing other elements of this screen</string>
    <string name="for_displaying_ads_by_admob">Press here to view the ad</string>
    <string name="error_try_again">Error, try again</string>
    <string name="error_try_delete">Error Editing, try deleting the device and add again</string>
    <string name="ok_do_not_show_again">OK, do not show again.</string>
    <string name="hint_cloud_storage_url">(Optional) Cloud Storage URL</string>
    <string name="tut_title_cloud_storage_icon">This is the Cloud Storage icon</string>
    <string name="tut_sub_cloud_storage_icon">Click to access Cloud Storage linked to motionEye to view videos and photos triggered by motion detection</string>
    <string name="invalid_cloud_storage_url_warning">Invalid Cloud Storage URL!</string>
    <string name="be_a_contributor">Be a Contributor</string>
    <string name="button_for_cloud_drive">Button for Cloud Drive</string>
    <string name="button_to_collapse_and_expand_stream_preview">Button to collapse and expand stream preview</string>
    <string name="checkbox_to_select_specific_network_camera">Checkbox to select specific network camera</string>
    <string name="help_and_faq">Help and FAQ</string>
    <string name="material_tap_target_prompt">MaterialTapTargetPrompt</string>
    <string name="apache_license">Apache License</string>
    <string name="icons">Icons</string>
    <string name="app_version_text">App Version</string>
    <string name="button_to_go_back_to_home_screen">Button to go back to Home Screen</string>
    <string name="dash">-</string>
    <string name="drive_icon">Drive Icon</string>
    <string name="github_icon">GITHUB_ICON</string>
    <string name="are_you_enjoying">Are you enjoying the app?</string>
    <string name="cancel">Cancel</string>
    <string name="delete_confirm_title">Confirm delete?</string>
    <string name="delete_confirm_message">Are you sure you want to delete this server from the app</string>
    <string name="summary_support">Got any queries? We are happy to help!</string>
    <string name="choose_email_client">Choose email client</string>
    <string name="summary_faq">View frequently asked questions</string>
    <string name="key_send_feedback">key_send_feedback</string>
    <string name="key_fullscreen">key_fullscreen</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_tnc">Terms and Conditions</string>
    <string name="key_pp">key_pp</string>
    <string name="key_tnc">key_tnc</string>
</resources>