<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jairaj.janglegmail.motioneye.activities.MainActivity">

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help_and_faq"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete"
        android:icon="@drawable/delete_ic"
        android:title=""
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/edit"
        android:icon="@drawable/edit_ic"
        android:title=""
        android:visible="false"
        app:showAsAction="ifRoom" />

</menu>
