<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/motioneye_grey"
        tools:context=".activities.AddDeviceDetailsActivity"
        android:fitsSystemWindows="true">


        <include
            android:id="@+id/include"
            layout="@layout/content_add_device_detail"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/appBarLayout"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/motioneye_dark_grey"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:layout_constraintBottom_toTopOf="@+id/include"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/motioneye_dark_grey"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/inputlayout_for_port"
            android:labelFor="@+id/port_input"
            android:paddingStart="0dp"
            android:paddingEnd="15dp"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/buttons_ll"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/port_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:hint="@string/http_for_local_access"
                android:inputType="number"
                android:singleLine="true"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/darker_gray"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/circle_bg"
            android:contentDescription="@string/imageview_for_url_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/include"
            app:srcCompat="@drawable/url_add_g" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/circle_bg"
            android:contentDescription="@string/imageview_for_port_icon"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:srcCompat="@drawable/network" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/inputlayout_for_label"
            android:labelFor="@+id/label_input"
            android:paddingStart="0dp"
            android:paddingEnd="15dp"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toStartOf="@+id/buttons_ll"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/label_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/device_label"
                android:inputType="textUri|textWebEditText"
                android:singleLine="true"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/darker_gray"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:adjustViewBounds="false"
            android:background="@drawable/circle_bg"
            android:contentDescription="@string/imageview_for_label_icon"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
            app:srcCompat="@drawable/label" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/circle_bg"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout4"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:srcCompat="@drawable/white_g_drive"
            android:contentDescription="@string/drive_icon" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:labelFor="@+id/label_input"
            android:paddingEnd="15dp"
            android:paddingStart="0dp"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/drive_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/optional_drive_link_linked_to_motioneye"
                android:inputType="textUri|textWebEditText"
                android:singleLine="true"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/darker_gray"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/inputlayout_for_url"
            android:labelFor="@+id/url_input"
            android:paddingStart="0dp"
            android:paddingEnd="15dp"
            android:textColorHint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.500"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/include">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/url_input"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/device_url"
                android:inputType="textUri|textWebEditText"
                android:singleLine="true"
                android:textColor="@android:color/background_light"
                android:textColorHint="@android:color/darker_gray"
                android:visibility="visible" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/buttons_ll"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_margin="0dp"
            android:background="@drawable/circle_bg"
            android:gravity="center_vertical"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/textInputLayout4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:clickable="true"
                android:contentDescription="@string/button_for_cancellation"
                android:focusable="true"
                app:srcCompat="@drawable/cross_white"
                tools:ignore="ContentDescription" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/det"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dp"
                android:clickable="true"
                android:contentDescription="@string/button_for_confirmation"
                android:focusable="true"
                app:srcCompat="@drawable/done"
                tools:ignore="ContentDescription" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>