<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/motioneye_grey"
    android:fitsSystemWindows="true"
    tools:context=".Add_Cam"
    tools:ignore="ContentDescription"
    android:contentDescription="@string/constraintlayout_for_list_ad_and_etc"
    android:labelFor="@+id/device_list">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/motioneye_dark_grey"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:animateLayoutChanges="true"
            android:background="@color/motioneye_dark_grey"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include
        android:id="@+id/include2"
        layout="@layout/content_add__cam" />

    <Button
        android:id="@+id/dummy_show_case_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/transparent"
        android:clickable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/device_list"
        android:labelFor="@+id/device_list"
        android:contentDescription="@string/dummy_button_for_showcaseview"/>

    <ListView
        android:id="@+id/device_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:footerDividersEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2"
        app:layout_constraintVertical_bias="0.0" />

    <com.jairaj.janglegmail.motioneye.MovableFloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:layout_marginTop="344dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/button_for_device_detail_intent"
        app:backgroundTint="@color/motioneye_blue"
        app:layout_constraintBottom_toBottomOf="@+id/device_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/plus_white" />

        <!-- TODO Add this to above block in id/fab
             app:layout_constraintBottom_toTopOf="@+id/adView" -->

    <!--<com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/for_displaying_ads_by_admob"
        android:visibility="gone"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-7081069887552324/7493759090"
        app:layout_constraintBottom_toBottomOf="@+id/device_list"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </com.google.android.gms.ads.AdView>-->

</android.support.constraint.ConstraintLayout>